fixing spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,9 +82,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: "Oswald", sans-serif;
 	font-weight: 300;
-	-moz-text-size-adjust: 60%;
-	-webkit-text-size-adjust: 60%;
-	-ms-text-size-adjust: 60%;
+	-moz-text-size-adjust: 80%;
+	-webkit-text-size-adjust:80%;
+	-ms-text-size-adjust: 80%;
 }
 
 /* ==========================================================================
